<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.mybatis</groupId>
	<artifactId>jpetstore</artifactId>
	<version>6.0.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>JPetStore Demo 6 - Distributed</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<cargo.maven.containerId>tomcat${tomcat.major-version}x</cargo.maven.containerId>
		<cargo.maven.containerUrl>http://archive.apache.org/dist/tomcat/tomcat-${tomcat.major-version}/v${tomcat.version}/bin/apache-tomcat-${tomcat.version}.zip</cargo.maven.containerUrl>
		<tomcat.major-version />
		<tomcat.version />
		<clirr.comparisonVersion>6.0.2</clirr.comparisonVersion>
	</properties>

	<dependencies>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.4.4</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>4.3.9.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>4.3.9.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.stripes</groupId>
			<artifactId>stripes</artifactId>
			<version>1.6.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.taglibs</groupId>
			<artifactId>taglibs-standard-spec</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.taglibs</groupId>
			<artifactId>taglibs-standard-impl</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>javax.servlet.jsp-api</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.3.5</version> <!-- Version 2.4.0 requires jdk8 -->
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>[2.9.9.2,)</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.8.9</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.0</version>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.8.47</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>1.7.1</version> <!-- Stay on 1.7.1 to support Java 6 -->
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.codeborne</groupId>
			<artifactId>selenide</artifactId>
			<version>4.5.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<modules>
		<module>frontend-service</module>
		<module>account-service</module>
		<module>catalog-service</module>
		<module>order-service</module>
		<module>core-functionality</module>
	</modules>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.cargo</groupId>
					<artifactId>cargo-maven2-plugin</artifactId>
					<version>1.6.4</version>
					<configuration>
						<container>
							<containerId>tomcat8x</containerId>
							<type>remote</type>
							<systemProperties>
								<cargo.jvmargs>-XX:MaxPermSize=256M -Xmx1024m</cargo.jvmargs>
							</systemProperties>
						</container>
						<configuration>
							<type>runtime</type>
							<properties>
								<cargo.hostname>172.17.0.2</cargo.hostname>
								<cargo.servlet.port>8080</cargo.servlet.port>
								<cargo.tomcat.manager.url>http://172.17.0.2:8080/manager</cargo.tomcat.manager.url>
								<cargo.remote.username>tomcat</cargo.remote.username>
								<cargo.remote.password>tomcat</cargo.remote.password>
							</properties>
						</configuration>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>3.0</version>
					<dependencies>
						<dependency>
							<groupId>com.mycila</groupId>
							<artifactId>license-maven-plugin-git</artifactId>
							<version>3.0</version>
							<scope>compile</scope>
						</dependency>
					</dependencies>
					<configuration>
						<header>${project.basedir}/license.txt</header>
						<excludes>
							<exclude>**/*.ctrl</exclude>
							<exclude>**/*.dat</exclude>
							<exclude>**/*.lck</exclude>
							<exclude>**/*.log</exclude>
							<exclude>**/*.xml</exclude>
							<exclude>**/*.sed</exclude>
							<exclude>**/.checkstyle</exclude>
							<exclude>**/*.xmi</exclude>
							<exclude>**/*.cfg</exclude>
							<exclude>**/*maven-wrapper.properties</exclude>
							<exclude>.factorypath</exclude>
							<exclude>.gitattributes</exclude>
							<exclude>mvnw</exclude>
							<exclude>mvnw.cmd</exclude>
							<exclude>ICLA</exclude>
							<exclude>LICENSE</exclude>
							<exclude>KEYS</exclude>
							<exclude>NOTICE</exclude>
						</excludes>
						<mapping>
							<xml.vm>XML_STYLE</xml.vm>
						</mapping>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<configuration>
						<locales>en,es,ja,ko</locales>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<configuration>
						<overwrite>true</overwrite>
					</configuration>
				</plugin>
				<plugin>
					<groupId>net.revelc.code.formatter</groupId>
					<artifactId>formatter-maven-plugin</artifactId>
					<version>2.0.1</version>
					<configuration>
						<lineEnding>LF</lineEnding>
						<encoding>UTF-8</encoding>
						<configFile>${project.basedir}/eclipse-code-formatter.xml</configFile>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>format</goal>
							</goals>
							<configuration>
								<configFile>${project.basedir}/eclipse-code-formatter.xml</configFile>
							</configuration>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>com.github.hazendaz</groupId>
							<artifactId>build-tools</artifactId>
							<version>1.1.4</version>
							<scope>compile</scope>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<configLocation>${project.basedir}/checkstyle-rules.xml</configLocation>
						<encoding>UTF-8</encoding>
						<consoleOutput>true</consoleOutput>
						<failsOnError>true</failsOnError>
						<linkXRef>false</linkXRef>
					</configuration>
					<executions>
						<execution>
							<id>validate</id>
							<phase>validate</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


	<profiles>
		<!-- Profiles for Integration tests -->
		<profile>
			<id>itest</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<configuration>
								<includes>
									<include>**/*IT.class</include>
								</includes>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.jacoco</groupId>
							<artifactId>jacoco-maven-plugin</artifactId>
							<configuration>
								<skip>true</skip>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<!-- Profiles for Application Server -->
		<profile>
			<id>tomcat90</id>
			<properties>
				<tomcat.major-version>9</tomcat.major-version>
				<tomcat.version>9.0.0.M22</tomcat.version>
			</properties>
		</profile>
		<profile>
			<id>tomcat85</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<tomcat.major-version>8</tomcat.major-version>
				<tomcat.version>8.5.16</tomcat.version>
			</properties>
		</profile>
		<profile>
			<id>tomcat80</id>
			<properties>
				<tomcat.major-version>8</tomcat.major-version>
				<tomcat.version>8.0.45</tomcat.version>
			</properties>
		</profile>
		<profile>
			<id>tomcat70</id>
			<properties>
				<tomcat.major-version>7</tomcat.major-version>
				<tomcat.version>7.0.79</tomcat.version>
			</properties>
		</profile>
		<profile>
			<id>tomee</id>
			<properties>
				<tomee.major-version>7</tomee.major-version>
				<tomee.version>7.0.3</tomee.version>
				<cargo.maven.containerId>tomee${tomee.major-version}x</cargo.maven.containerId>
				<cargo.maven.containerUrl>http://repo1.maven.org/maven2/org/apache/tomee/apache-tomee/${tomee.version}/apache-tomee-${tomee.version}-plume.zip</cargo.maven.containerUrl>
			</properties>
		</profile>
		<profile>
			<id>wildfly11</id>
			<properties>
				<wildfly.major-version>11</wildfly.major-version>
				<wildfly.version>11.0.0.Alpha1</wildfly.version>
				<cargo.maven.containerId>wildfly${wildfly.major-version}x</cargo.maven.containerId>
				<cargo.maven.containerUrl>http://download.jboss.org/wildfly/${wildfly.version}/wildfly-${wildfly.version}.tar.gz</cargo.maven.containerUrl>
			</properties>
		</profile>
		<profile>
			<id>wildfly10</id>
			<properties>
				<wildfly.major-version>10</wildfly.major-version>
				<wildfly.version>10.1.0.Final</wildfly.version>
				<cargo.maven.containerId>wildfly${wildfly.major-version}x</cargo.maven.containerId>
				<cargo.maven.containerUrl>http://download.jboss.org/wildfly/${wildfly.version}/wildfly-${wildfly.version}.tar.gz</cargo.maven.containerUrl>
			</properties>
		</profile>
		<profile>
			<id>liberty</id>
			<properties>
				<liberty.version>17.0.0.1</liberty.version>
				<cargo.maven.containerId>liberty</cargo.maven.containerId>
				<cargo.maven.containerUrl>http://repo1.maven.org/maven2/com/ibm/websphere/appserver/runtime/wlp-javaee7/${liberty.version}/wlp-javaee7-${liberty.version}.zip</cargo.maven.containerUrl>
			</properties>
		</profile>
		<profile>
			<id>jetty</id>
			<properties>
				<jetty.major-version>9</jetty.major-version>
				<jetty.version>9.4.6.v20170531</jetty.version>
				<cargo.maven.containerId>jetty${jetty.major-version}x</cargo.maven.containerId>
				<cargo.maven.containerUrl>http://repo1.maven.org/maven2/org/eclipse/jetty/jetty-distribution/${jetty.version}/jetty-distribution-${jetty.version}.tar.gz</cargo.maven.containerUrl>
			</properties>
		</profile>
		<profile>
			<id>glassfish</id>
			<properties>
				<glassfish.major-version>4</glassfish.major-version>
				<glassfish.version>4.1.2</glassfish.version>
				<cargo.maven.containerId>glassfish${glassfish.major-version}x</cargo.maven.containerId>
				<cargo.maven.containerUrl>http://download.java.net/glassfish/${glassfish.version}/release/glassfish-${glassfish.version}.zip</cargo.maven.containerUrl>
			</properties>
		</profile>
		<profile>
			<id>resin</id>
			<properties>
				<resin.major-version>4</resin.major-version>
				<resin.version>4.0.53</resin.version>
				<cargo.maven.containerId>resin${resin.major-version}x</cargo.maven.containerId>
				<cargo.maven.containerUrl>http://www.caucho.com/download/resin-${resin.version}.zip</cargo.maven.containerUrl>
			</properties>
		</profile>
		<!-- Profiles for JDK version -->
		<profile>
			<id>jdk7</id>
			<activation>
				<jdk>1.7</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-compiler-plugin</artifactId>
							<configuration>
								<testExcludes>
									<testExclude>**/*IT.java</testExclude>
								</testExcludes>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>jdk6</id>
			<activation>
				<jdk>1.6</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-compiler-plugin</artifactId>
							<configuration>
								<testExcludes>
									<testExclude>**/*IT.java</testExclude>
								</testExcludes>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

</project>
